--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquid possimus impedit ullam illum. Facere porro consequuntur neque explicabo voluptatem expedita, laborum inventore a ipsa adipisci nam nisi tempore voluptas!
+    
+    Uff, yo no entiendo latín... ¿Puedes traducírmelo?
+    
 </body>
 </html>
