--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquid possimus impedit ullam illum. Facere porro consequuntur neque explicabo voluptatem expedita, laborum inventore a ipsa adipisci nam nisi tempore voluptas!
     
     Uff, yo no entiendo latín... ¿Puedes traducírmelo?
+
+    La traducción sería: No es más rico el que más tiene, sino el que menos necesita
     
 </body>
 </html>
