--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     + La traducción sería: No es más rico el que más tiene, sino el que menos necesita
     
     - Eso te lo acabas de inventar 100% xd
+
+    + Jajajaja, me has pillado! Yo tampoco sé latín ;)
     
 </body>
 </html>
